--- a/.github/workflows/download_aggTrades.yml
+++ b/.github/workflows/download_aggTrades.yml
@@ -1,5 +1,3 @@
-# .github/workflows/download_aggTrades.yml
-
 name: '📥 Download & Extract aggTrades per Symbol'
 
 on:
@@ -15,7 +13,7 @@ on:
 jobs:
   download-and-feature:
     name: Download & Feature ${{ matrix.symbol }}
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         symbol: [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ENAUSDT]
@@ -55,7 +53,7 @@ jobs:
           SDG=${{ steps.dates.outputs.global_start }}
           ED=${{ steps.dates.outputs.global_end }}
 
-          # 1) Initiales Inception-Datum
+          # 1) initial Inception-Datum
           case "$SYMBOL" in
             BTCUSDT|ETHUSDT) INC=2019-12-31;;
             XRPUSDT)         INC=2020-01-06;;
@@ -65,15 +63,14 @@ jobs:
             *)               INC=$SDG;;
           esac
 
-          # 2) Für alle außer BTCUSDT: INC solange anheben, bis Zip existiert
+          # 2) INC für alle außer BTCUSDT so lange anheben, bis erste ZIP existiert
           if [ "$SYMBOL" != "BTCUSDT" ]; then
             CAND="$INC"
             while true; do
-              Z="${SYMBOL}-aggTrades-${CAND}.zip"
-              U="https://data.binance.vision/data/futures/um/daily/aggTrades/${SYMBOL}/${Z}"
-              if curl -sSf "$U" -o /dev/null; then
-                INC="$CAND"
-                break
+              ZIP="${SYMBOL}-aggTrades-${CAND}.zip"
+              URL="https://data.binance.vision/data/futures/um/daily/aggTrades/${SYMBOL}/${ZIP}"
+              if curl -sSf "$URL" -o /dev/null; then
+                INC="$CAND"; break
               else
                 CAND=$(date -I -d "$CAND +1 day")
               fi
@@ -81,8 +78,7 @@ jobs:
           fi
 
           # 3) SD = max(global_start, INC)
-          t1=$(date -d"$SDG" +%s)
-          t2=$(date -d"$INC" +%s)
+          t1=$(date -d"$SDG" +%s); t2=$(date -d"$INC" +%s)
           [ $t1 -lt $t2 ] && SD=$INC || SD=$SDG
 
           # 4) Overlap-Tag
@@ -99,24 +95,26 @@ jobs:
             if curl -sSf "$URL" -o "$ZIP"; then
               unzip -q -o "$ZIP" -d "$DIR" && rm -f "$ZIP"
             else
-              echo "⚠️ Missing $ZIP – skipping"
-              rm -f "$ZIP" || true
+              echo "⚠️ Missing $ZIP – skipping"; rm -f "$ZIP" || true
             fi
             CUR=$(date -I -d "$CUR +1 day")
           done
 
+      - name: Verify CSV directory
+        run: |
+          if [ ! -d "data/aggTrades/${{ matrix.symbol }}" ]; then
+            echo "❌ data/aggTrades/${{ matrix.symbol }} does not exist"; exit 1
+          fi
+          echo "✅ Found directory data/aggTrades/${{ matrix.symbol }}"
+
       - name: Feature extraction
         run: |
           mkdir -p historical_tech/aggTrades/features
-          if ls data/aggTrades/${{ matrix.symbol }}/*.csv >/dev/null 2>&1; then
-            python3 extract_aggTrades_features.py \
-              --input-dir   data/aggTrades/${{ matrix.symbol }} \
-              --output-file historical_tech/aggTrades/features/${{ matrix.symbol }}-features-${{ steps.dates.outputs.global_start }}_to_${{ steps.dates.outputs.global_end }}.parquet \
-              --start-date  ${{ steps.dates.outputs.global_start }} \
-              --end-date    ${{ steps.dates.outputs.global_end }}
-          else
-            echo "⚠️ No CSVs for ${{ matrix.symbol }}, skipping"
-          fi
+          python3 extract_aggTrades_features.py \
+            --input-dir   data/aggTrades/${{ matrix.symbol }} \
+            --output-file historical_tech/aggTrades/features/${{ matrix.symbol }}-features-${{ steps.dates.outputs.global_start }}_to_${{ steps.dates.outputs.global_end }}.parquet \
+            --start-date  ${{ steps.dates.outputs.global_start }} \
+            --end-date    ${{ steps.dates.outputs.global_end }}
 
       - name: Commit & Push
         run: |
@@ -134,4 +132,4 @@ jobs:
 
       - name: Cleanup Runner Workspace
         if: always()
-        run: rm -rf /home/ssm-user/actions-runner/_work/crypto_signal_app
+        run: rm -rf /home/runner/work/crypto_signal_app/crypto_signal_app
