--- a/.github/workflows/download_aggTrades.yml
+++ b/.github/workflows/download_aggTrades.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   download-and-feature:
     name: Download & Feature ${{ matrix.symbol }}
+    # Wechsel hier zwischen ubuntu-latest und self-hosted:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -29,13 +30,11 @@ jobs:
           fetch-depth: 0
           persist-credentials: true
 
-      - name: Setup Python
+      - name: Setup Python & Tools
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
-
-      - name: Install Dependencies
-        run: |
+      - run: |
           sudo apt-get update
           sudo apt-get install -y unzip curl
           pip3 install --upgrade pip pandas numpy pyarrow
@@ -53,7 +52,7 @@ jobs:
           SDG=${{ steps.dates.outputs.global_start }}
           ED=${{ steps.dates.outputs.global_end }}
 
-          # 1) initial Inception-Datum
+          # 1) Initiales Inception-Datum
           case "$SYMBOL" in
             BTCUSDT|ETHUSDT) INC=2019-12-31;;
             XRPUSDT)         INC=2020-01-06;;
@@ -63,7 +62,7 @@ jobs:
             *)               INC=$SDG;;
           esac
 
-          # 2) INC für alle außer BTCUSDT so lange anheben, bis erste ZIP existiert
+          # 2) Für alle außer BTCUSDT INC so lange erhöhen, bis erste ZIP da ist
           if [ "$SYMBOL" != "BTCUSDT" ]; then
             CAND="$INC"
             while true; do
@@ -81,12 +80,12 @@ jobs:
           t1=$(date -d"$SDG" +%s); t2=$(date -d"$INC" +%s)
           [ $t1 -lt $t2 ] && SD=$INC || SD=$SDG
 
-          # 4) Overlap-Tag
+          # 4) Overlap-Tag vorbereiten
           SD_RAW=$(date -I -d "$SD -1 day")
           DIR=data/aggTrades/$SYMBOL
           mkdir -p "$DIR"
 
-          # 5) Download-Loop
+          # 5) Download-Loop inkl. Overlap-Tag
           CUR="$SD_RAW"
           while [[ "$CUR" < "$ED" || "$CUR" == "$ED" ]]; do
             ZIP="${SYMBOL}-aggTrades-${CUR}.zip"
@@ -103,9 +102,9 @@ jobs:
       - name: Verify CSV directory
         run: |
           if [ ! -d "data/aggTrades/${{ matrix.symbol }}" ]; then
-            echo "❌ data/aggTrades/${{ matrix.symbol }} does not exist"; exit 1
+            echo "❌ data/aggTrades/${{ matrix.symbol }} not found"; exit 1
           fi
-          echo "✅ Found directory data/aggTrades/${{ matrix.symbol }}"
+          echo "✅ data/aggTrades/${{ matrix.symbol }} exists"
 
       - name: Feature extraction
         run: |
@@ -116,22 +115,18 @@ jobs:
             --start-date  ${{ steps.dates.outputs.global_start }} \
             --end-date    ${{ steps.dates.outputs.global_end }}
 
-      - name: Commit & Push
+      - name: Sync & Push changes
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          # hole aktuelle main und rebase, statt reset, um stale-fehler zu vermeiden
           git fetch origin main
-          git reset --mixed origin/main
+          git checkout main
+          git pull --rebase origin main
           git add historical_tech/aggTrades/features
-          git commit -m "♻️ ${{ matrix.symbol }} Features ${{ steps.dates.outputs.global_start }} to ${{ steps.dates.outputs.global_end }}" || echo "No changes"
-          git push https://x-access-token:${REPO_TOKEN}@github.com/${REPO}.git HEAD:main --force-with-lease
+          git commit -m "♻️ ${{ matrix.symbol }} Features ${{ steps.dates.outputs.global_start }} to ${{ steps.dates.outputs.global_end }}" || echo "No changes to commit"
+          git push https://x-access-token:${REPO_TOKEN}@github.com/${REPO}.git HEAD:main
 
-      - name: Cleanup raw
+      - name: Cleanup raw data
         if: always()
         run: rm -rf data/aggTrades/${{ matrix.symbol }}
-
-      - name: Cleanup Runner Workspace
-        if: always()
-        run: |
-          echo "🧹 Cleaning up runner workspace"
-          rm -rf "$RUNNER_WORKSPACE"
