--- a/.github/workflows/download_indexPriceKlines.yml
+++ b/.github/workflows/download_indexPriceKlines.yml
@@ -31,7 +31,6 @@ jobs:
           INTERVALS=( "1h" "4h" )
 
           for iv in "${INTERVALS[@]}"; do
-            # determine start date
             TARGET_DIR="historical_tech/indexPriceKlines/${SYMBOL}/${iv}"
             if compgen -G "$TARGET_DIR/${SYMBOL}-${iv}-*.csv" > /dev/null; then
               LAST=$(find "$TARGET_DIR" -type f -name "${SYMBOL}-${iv}-*.csv" \
@@ -66,7 +65,7 @@ jobs:
       - name: Upload indexPriceKlines artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: data-indexPriceKlines
+          name: data-indexPriceKlines-${{ matrix.symbol }}
           path: |
             data/futures/um/daily/indexPriceKlines/${{ matrix.symbol }}/1h/*.csv
             data/futures/um/daily/indexPriceKlines/${{ matrix.symbol }}/4h/*.csv
@@ -86,7 +85,7 @@ jobs:
       - name: Download indexPriceKlines artifacts
         uses: actions/download-artifact@v4
         with:
-          name: data-indexPriceKlines
+          name: data-indexPriceKlines-${{ matrix.symbol }}
           path: data-artifacts
 
       - name: Merge indexPriceKlines into historical_tech
@@ -96,12 +95,10 @@ jobs:
           ROOT="historical_tech/indexPriceKlines/data-artifacts"
           mkdir -p "$ROOT"
 
-          # für jede data-indexPriceKlines-ORDNER
           for art in data-artifacts/*; do
-            name=$(basename "$art")                         # z.B. data-indexPriceKlines-BNBUSDT
+            name=$(basename "$art")               # e.g. data-indexPriceKlines-BNBUSDT
             dst="$ROOT/$name"
             mkdir -p "$dst"
-            # move gleich die kompletten interval-Verzeichnisse (1h,4h)
             mv "$art"/* "$dst"/
             echo " ➕ Moved $name → $dst"
           done
