--- a/.github/workflows/download_bookDepth.yml
+++ b/.github/workflows/download_bookDepth.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install --upgrade pandas pyarrow
+          pip install --upgrade pandas pyarrow scipy
 
       - name: Calc dates
         id: dates
